// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsMenu tests should render empty state correctly 1`] = `
<div>
  <div
    class="pf-v6-c-menu pf-m-plain pf-m-scrollable"
    data-ouia-component-id="OUIA-Generated-Menu-:r1:"
    data-ouia-component-type="PF6/Menu"
    data-ouia-safe="true"
  >
    <div
      class="pf-v6-c-menu__search"
    >
      <div
        class="pf-v6-c-menu__search-input pf-v6-u-mx-sm"
      >
        <div
          class="pf-v6-c-text-input-group"
          customicon="[object Object]"
          data-testid="search-input"
          type="search"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
              <input
                aria-label="Filter menu items"
                class="pf-v6-c-text-input-group__text-input"
                placeholder="Search services"
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="pf-v6-c-divider"
    />
    <div
      class="pf-v6-c-menu__content"
      id="notifications-menu-content"
    >
      <div
        class="pf-v6-c-empty-state pf-m-sm pf-v6-u-mt-lg"
      >
        <div
          class="pf-v6-c-empty-state__content"
        >
          <div
            class="pf-v6-c-empty-state__header"
          >
            <div
              class="pf-v6-c-empty-state__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                  />
                </svg>
              </svg>
            </div>
            <div
              class="pf-v6-c-empty-state__title"
            >
              <h4
                class="pf-v6-c-empty-state__title-text"
              >
                No matching services found
              </h4>
            </div>
          </div>
          <div
            class="pf-v6-c-empty-state__body"
          >
            Adjust your filters and try again.
          </div>
          <div
            class="pf-v6-c-empty-state__footer"
          >
            <button
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:r2:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              type="button"
            >
              <span
                class="pf-v6-c-button__text"
              >
                Clear filters
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsMenu tests should render nav correctly 1`] = `
<div>
  <div
    class="pf-v6-c-menu pf-m-plain pf-m-scrollable"
    data-ouia-component-id="OUIA-Generated-Menu-:r7:"
    data-ouia-component-type="PF6/Menu"
    data-ouia-safe="true"
  >
    <div
      class="pf-v6-c-menu__search"
    >
      <div
        class="pf-v6-c-menu__search-input pf-v6-u-mx-sm"
      >
        <div
          class="pf-v6-c-text-input-group"
          customicon="[object Object]"
          data-testid="search-input"
          type="search"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
              <input
                aria-label="Filter menu items"
                class="pf-v6-c-text-input-group__text-input"
                placeholder="Search services"
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="pf-v6-c-divider"
    />
    <div
      class="pf-v6-c-menu__content"
      id="notifications-menu-content"
    >
      <section
        class="pf-v6-c-menu__group pf-v6-u-px-sm pf-v6-u-font-size-xs"
      >
        <h1
          class="pf-v6-c-menu__group-title"
        >
          Red Hat Enterprise Linux
        </h1>
        <ul
          class="pf-v6-c-menu__list"
          role="menu"
        >
          <li
            class="pf-v6-c-menu__list-item pf-v6-u-font-size-md"
            role="none"
          >
            <button
              class="pf-v6-c-menu__item pf-v6-u-font-size-md"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span
                class="pf-v6-c-menu__item-main"
              >
                <span
                  class="pf-v6-c-menu__item-text"
                >
                  Advisor
                </span>
              </span>
            </button>
          </li>
        </ul>
      </section>
    </div>
  </div>
</div>
`;
